<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_NOTIF"

        android:orderInCategory="100"
        android:title="NOTI"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Service"

        android:orderInCategory="100"
        android:title="SERVICE_TEST"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"

        android:orderInCategory="100"
        android:title="Settings"
        app:showAsAction="never" />
</menu>
